# psa-ng

./: .actrc  .agents  .dockerignore  .dotstop.dot  .env.oft  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  config.toml.example  deny.toml  docker-compose.yaml  mkdocs.yaml  pyproject.toml
.github/: .act-secrets.example  act-event-tag.json  copilot-instructions.md
.github/actions/run-oft/: action.yaml
.github/workflows/: check.yaml  docs.yaml  nightly.yaml  oft.yaml  release.yaml
docs/: specification.md
mkdocs/: README.md
mkdocs/trustable/: .nav.yml
psa-api/: Cargo.toml
psa-api/src/: auth.rs  client.rs  config.rs  error.rs  lib.rs  models.rs
psa-web/: Cargo.toml
psa-web/src/: config_tests.rs  db.rs  main.rs  route_tests.rs  routes.rs  state.rs  templates.rs
trustable/psa-ng/: PSA_NG-API_ACCESS_CONTROL.md  PSA_NG-API_ACCESS_CONTROL_CONTEXT.md  PSA_NG-API_AUTHENTICATION.md  PSA_NG-API_AUTHENTICATION_CONTEXT.md  PSA_NG-API_PROTOCOL_CONFORMANCE.md  PSA_NG-API_PROTOCOL_CONFORMANCE_CONTEXT.md  PSA_NG-API_RESILIENCE.md  PSA_NG-API_RESILIENCE_CONTEXT.md  PSA_NG-BUILD_RELEASE.md  PSA_NG-BUILD_RELEASE_CONTEXT.md  PSA_NG-CHANGE_MANAGEMENT.md  PSA_NG-CHANGE_MANAGEMENT_CONTEXT.md  PSA_NG-CONTAINER_DEPLOYMENT.md  PSA_NG-CONTAINER_DEPLOYMENT_CONTEXT.md  PSA_NG-CREDENTIAL_SECURITY.md  PSA_NG-CREDENTIAL_SECURITY_CONTEXT.md  PSA_NG-DEPENDENCY_PROVENANCE.md  PSA_NG-DEPENDENCY_PROVENANCE_CONTEXT.md  PSA_NG-DEVELOPMENT_PROCESS.md  PSA_NG-DEVELOPMENT_PROCESS_CONTEXT.md  PSA_NG-ERROR_HANDLING.md  PSA_NG-ERROR_HANDLING_CONTEXT.md  PSA_NG-RELEASE_COMPLETENESS.md  PSA_NG-RELEASE_COMPLETENESS_CONTEXT.md  PSA_NG-SYSTEMATIC_TESTING.md  PSA_NG-SYSTEMATIC_TESTING_CONTEXT.md  PSA_NG-TEST_COVERAGE.md  PSA_NG-TEST_COVERAGE_CONTEXT.md  PSA_NG-UNIT_TESTING.md  PSA_NG-UNIT_TESTING_CONTEXT.md  PSA_NG-VEHICLE_OPERATIONS.md  PSA_NG-VEHICLE_OPERATIONS_CONTEXT.md  PSA_NG-WEB_HARDENING.md  PSA_NG-WEB_HARDENING_CONTEXT.md  PSA_NG-WEB_INTERFACE.md  PSA_NG-WEB_INTERFACE_CONTEXT.md
