# [impl->req~stable-dependencies~1]
[package]
name = "psa-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PSA Connected Car v4 API client library"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"
url = "2"
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
wiremock = "0.6"
