# [impl->req~stable-dependencies~1]
[package]
name = "psa-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PSA Connected Car web dashboard and REST API"

[dependencies]
psa-api = { path = "../psa-api" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["fs"] }
rusqlite = { version = "0.35", features = ["bundled"] }
toml = "0.8"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
axum-test = "17"
wiremock = "0.6"
serde_json = { workspace = true }
chrono = { workspace = true }
